--- a/client/src/layout/assets/css/styles.css
+++ b/client/src/layout/assets/css/styles.css
@@ -336,13 +336,12 @@ template {
 
 html {
   height: 100%;
-  overflow: hidden;
+  overflow-y: scroll;
 }
 
 body {
   font-family: 'Lato', sans-serif;
   height: 100%;
-  overflow: hidden;
 }
 
 a {
